Refactor/compiler2 (#29)
* Improvements and bug fixes

- all tests pass
- hover migrated to compiler
- hover shows correct signature and javadoc
- code actions such as rename, import etc works now
- deleted outdated tests
- filestore uses javasources now instead of workspace roots (WIP)
- fixed workspace widening for ATTR compiling and cacheslot NONE
- fixed lint used for tests

* Improvement compiling and caching

---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>